# scriptbreak

./: README.md  install.sh
mcp/: README.md  package.json  scriptbreak-mcp.mjs
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
